feat(i18n,blog,auth,ui): complete translations, simplify blog filters, update company sidebar
- Home (apps/web/src/pages/HomePage.tsx):
  - Replaced hardcoded FR strings with i18n keys (title/feature cards/CTAs)
  - Fixed “Se connecter” action to use t('navigation.login') and link to /login

- Blog list (apps/web/src/pages/blog/BlogPage.tsx):
  - Localized headings and texts using i18n
  - Switched dates to localized format via useLocalizedDate()
  - Removed any need for a manual “Filter” button: filters now update automatically from input/select
  - Cleaned unused imports

- Blog post (apps/web/src/pages/blog/BlogPostPage.tsx):
  - Localized all labels/messages (back to blog, category fallback, featured badge, related, share actions)
  - Switched dates to use useLocalizedDate()
  - Removed debug console logs and unused imports

- Auth (apps/web/src/pages/LoginPage.tsx, apps/web/src/pages/RegisterPage.tsx):
  - Localized labels, placeholders, actions, and 2FA flow (screen-reader text included)
  - Buttons use localized loading and action texts

- Sidebar (apps/web/src/components/layout/Sidebar.tsx):
  - Removed “Trouver des Étudiants” (/students) from the company sidebar (already available via Offers)

- i18n (apps/web/src/i18n/locales/en.json, fr.json):
  - Added/updated keys for home (targeted offers, view profiles, final CTA)
  - Added blog keys (loadingPost, postNotFound, backToBlog, relatedArticles, shareThisArticle, twitter/linkedin/copyLink)
  - Kept FR/EN files in sync

Chore:
- Fixed lints; no new warnings/errors

No breaking changes.

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -302,6 +302,15 @@
     "noCategory": "No category",
     "featuredBadge": "Featured",
     "readArticle": "Read article",
+    "loadingPost": "Loading post...",
+    "postNotFound": "Post not found",
+    "postNotFoundDescription": "The requested post does not exist.",
+    "backToBlog": "Back to blog",
+    "relatedArticles": "Related articles",
+    "shareThisArticle": "Share this article",
+    "twitter": "Twitter",
+    "linkedin": "LinkedIn",
+    "copyLink": "Copy link",
     "searchPlaceholder": "Search for an article...",
     "allCategories": "All categories",
     "search": "Search",
@@ -641,10 +650,16 @@
     "discoverOurServices": "Discover all our services to facilitate your internship and work-study search",
     "personalizedProfile": "Personalized profile",
     "personalizedProfileDescription": "Create your profile and highlight your skills and best opportunities.",
+    "targetedOffers": "Targeted offers",
+    "targetedOffersDescription": "Access offers that perfectly match your profile and aspirations.",
     "smartMatching": "Smart matching",
     "smartMatchingDescription": "Our algorithm suggests the best offers based on your profile and preferences.",
     "directContact": "Direct contact",
-    "directContactDescription": "Exchange directly with companies and students without intermediaries."
+    "directContactDescription": "Exchange directly with companies and students without intermediaries.",
+    "viewProfiles": "View profiles",
+    "readyToStart": "Ready to start the adventure?",
+    "joinCommunity": "Join our community and find the internship or apprenticeship of your dreams",
+    "createFreeAccount": "Create a free account"
   },
   "profile": {
     "manageYourProfile": "Manage your profile",
