--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -328,6 +328,15 @@
     "noCategory": "Aucune catégorie",
     "featuredBadge": "Mis en avant",
     "readArticle": "Lire l'article",
+    "loadingPost": "Chargement de l'article...",
+    "postNotFound": "Article non trouvé",
+    "postNotFoundDescription": "L'article demandé n'existe pas.",
+    "backToBlog": "Retour au blog",
+    "relatedArticles": "Articles similaires",
+    "shareThisArticle": "Partager cet article",
+    "twitter": "Twitter",
+    "linkedin": "LinkedIn",
+    "copyLink": "Copier le lien",
     "searchPlaceholder": "Rechercher un article...",
     "allCategories": "Toutes les catégories",
     "search": "Rechercher",
@@ -668,10 +677,16 @@
     "discoverOurServices": "Découvrez tous nos services pour faciliter votre recherche de stage et d'alternance",
     "personalizedProfile": "Profil personnalisé",
     "personalizedProfileDescription": "Créez votre profil et mettez en avant vos compétences et vos meilleures opportunités.",
+    "targetedOffers": "Offres ciblées",
+    "targetedOffersDescription": "Accédez à des offres correspondant parfaitement à votre profil et vos aspirations.",
     "smartMatching": "Matching intelligent",
     "smartMatchingDescription": "Notre algorithme vous propose les meilleures offres en fonction de votre profil et de vos préférences.",
     "directContact": "Contact direct",
-    "directContactDescription": "Échangez directement avec les entreprises et les étudiants sans intermédiaire."
+    "directContactDescription": "Échangez directement avec les entreprises et les étudiants sans intermédiaire.",
+    "viewProfiles": "Voir les profils",
+    "readyToStart": "Prêt à commencer l'aventure ?",
+    "joinCommunity": "Rejoignez notre communauté et trouvez le stage ou l'alternance de vos rêves",
+    "createFreeAccount": "Créer un compte gratuitement"
   },
   "profile": {
     "manageYourProfile": "Gérer votre profil",
