--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -994,6 +994,115 @@
     "contact": "8. Contact",
     "contactText": "For any questions regarding our use of cookies, contact us at: "
   },
+  "legalNotice": {
+    "title": "Legal Notice",
+    "subtitle": "Legal and regulatory information about the Adopte un Étudiant website",
+    "labels": {
+      "email": "Email",
+      "phone": "Phone"
+    },
+    "editor": {
+      "title": "1. Publisher of the website",
+      "companyName": "Adopte un Étudiant",
+      "legalForm": "Simplified joint-stock company (SAS)",
+      "shareCapital": "Share capital: €10,000",
+      "rcs": "RCS Paris B 123 456 789",
+      "siret": "SIRET: 12345678901234",
+      "vat": "VAT: FR12345678901",
+      "address": "Registered office: 123 Avenue des Champs-Élysées, 75008 Paris, France",
+      "email": "contact@adopte-un-etudiant.fr",
+      "phone": "+33 1 23 45 67 89"
+    },
+    "publication": {
+      "title": "2. Publication director",
+      "director": "Sarah Johnson, President",
+      "editorialManager": "Editorial manager: Marc Dubois, CTO",
+      "email": "direction@adopte-un-etudiant.fr"
+    },
+    "hosting": {
+      "title": "3. Hosting",
+      "mainHostTitle": "Main host:",
+      "mainHostName": "OVH SAS",
+      "mainHostAddress1": "2 rue Kellermann",
+      "mainHostAddress2": "59100 Roubaix, France",
+      "mainHostPhone": "+33 9 72 10 10 07",
+      "cdnTitle": "CDN and cloud services:",
+      "cdnName": "Cloudflare, Inc.",
+      "cdnAddress": "101 Townsend St, San Francisco, CA 94107, USA"
+    },
+    "intellectualProperty": {
+      "title": "4. Intellectual property",
+      "p1": "All content on this website (texts, images, videos, logos, graphics, icons, sounds, software, etc.) is protected by copyright, trademark law and/or any other intellectual property rights.",
+      "p2": "These elements are the exclusive property of Adopte un Étudiant or are used with permission. Any reproduction, representation, modification, publication, adaptation of all or part of the elements of the site, regardless of the means or process used, is prohibited without prior written authorization.",
+      "p3": "Any unauthorized use of the site or any of the elements it contains will be considered as constituting an infringement and prosecuted in accordance with the provisions of Articles L.335-2 et seq. of the French Intellectual Property Code."
+    },
+    "dataProtection": {
+      "title": "5. Personal data protection",
+      "p1": "In accordance with the French Data Protection Act of January 6, 1978 as amended and the General Data Protection Regulation (GDPR) of April 27, 2016, you have the right to access, rectify, delete, object, restrict processing and portability of your data.",
+      "p2": "To exercise these rights or for any questions about the processing of your data, you can contact us:",
+      "contactEmail": "By email: dpo@adopte-un-etudiant.fr",
+      "contactMail": "By post: Adopte un Étudiant - DPO, 123 Avenue des Champs-Élysées, 75008 Paris",
+      "cnilPrompt": "You can also lodge a complaint with the French Data Protection Authority (CNIL):",
+      "cnilLabel": "www.cnil.fr"
+    },
+    "additionalInfoTitle": "Additional information",
+    "additionalInfoText": "This legal notice was updated on January 1, 2024. It may be changed at any time to comply with legal and regulatory developments."
+  },
+  "gdpr": {
+    "title": "General Data Protection Regulation",
+    "description": "Our commitment to protecting your privacy and personal data",
+    "lastUpdated": "Last updated: January 1, 2024",
+    "introTitle": "Our GDPR commitment",
+    "introText": "Adopte un Étudiant is committed to protecting the privacy of its users in accordance with the European Union's General Data Protection Regulation (GDPR), in force since May 25, 2018.",
+    "dataCollectedTitle": "Data collected",
+    "dataCollectedSubtitle": "We collect only the data necessary for our services",
+    "dataTypes": {
+      "identification": {
+        "title": "Identification data",
+        "items": ["First and last name", "Email address", "Phone number", "Date of birth"]
+      },
+      "academic": {
+        "title": "Academic data",
+        "items": ["Educational institution", "Level of study", "Specialization", "CV and portfolio"]
+      },
+      "professional": {
+        "title": "Professional data",
+        "items": ["Professional experience", "Skills", "Job preferences", "Availability"]
+      }
+    },
+    "usage": {
+      "purposesTitle": "Main purposes",
+      "purposesList": [
+        "Creation and management of your user account",
+        "Connecting with partner companies",
+        "Improvement of our matching algorithms",
+        "Service-related communications"
+      ],
+      "legalBasesTitle": "Legal bases",
+      "legalBasesList": [
+        "Performance of the service contract",
+        "Explicit user consent",
+        "Legitimate interest to improve services",
+        "Legal and regulatory obligations"
+      ]
+    },
+    "rights": {
+      "title": "Your GDPR rights",
+      "accessTitle": "Right of access",
+      "accessDescription": "You can request access to the personal data we hold about you.",
+      "rectificationTitle": "Right to rectification",
+      "rectificationDescription": "You can request correction of inaccurate or incomplete data.",
+      "erasureTitle": "Right to erasure",
+      "erasureDescription": "You can request deletion of your data in certain circumstances.",
+      "portabilityTitle": "Right to data portability",
+      "portabilityDescription": "You can obtain your data in a structured and readable format."
+    },
+    "contact": {
+      "title": "Exercise your rights",
+      "description": "To exercise your rights or for any questions about the processing of your personal data, contact our Data Protection Officer (DPO).",
+      "responseTime": "Response time: maximum 30 days"
+    }
+  },
   "dashboardStudent": {
     "title": "Student Dashboard",
     "welcome": "Welcome {{email}}, track your applications and discover new opportunities",
