--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -1034,6 +1034,115 @@
     "contact": "8. Contact",
     "contactText": "Pour toute question concernant notre utilisation des cookies, contactez-nous à : "
   },
+  "legalNotice": {
+    "title": "Mentions légales",
+    "subtitle": "Informations légales et réglementaires concernant le site Adopte un Étudiant",
+    "labels": {
+      "email": "Email",
+      "phone": "Téléphone"
+    },
+    "editor": {
+      "title": "1. Éditeur du site",
+      "companyName": "Adopte un Étudiant",
+      "legalForm": "Société par Actions Simplifiée (SAS)",
+      "shareCapital": "Capital social : 10 000€",
+      "rcs": "RCS Paris B 123 456 789",
+      "siret": "SIRET : 12345678901234",
+      "vat": "TVA Intracommunautaire : FR12345678901",
+      "address": "Siège social : 123 Avenue des Champs-Élysées, 75008 Paris, France",
+      "email": "contact@adopte-un-etudiant.fr",
+      "phone": "+33 1 23 45 67 89"
+    },
+    "publication": {
+      "title": "2. Directeur de la publication",
+      "director": "Sarah Johnson, Présidente",
+      "editorialManager": "Responsable éditorial : Marc Dubois, CTO",
+      "email": "direction@adopte-un-etudiant.fr"
+    },
+    "hosting": {
+      "title": "3. Hébergement",
+      "mainHostTitle": "Hébergeur principal :",
+      "mainHostName": "OVH SAS",
+      "mainHostAddress1": "2 rue Kellermann",
+      "mainHostAddress2": "59100 Roubaix, France",
+      "mainHostPhone": "+33 9 72 10 10 07",
+      "cdnTitle": "CDN et services cloud :",
+      "cdnName": "Cloudflare, Inc.",
+      "cdnAddress": "101 Townsend St, San Francisco, CA 94107, USA"
+    },
+    "intellectualProperty": {
+      "title": "4. Propriété intellectuelle",
+      "p1": "L'ensemble du contenu de ce site web (textes, images, vidéos, logos, graphismes, icônes, sons, logiciels, etc.) est protégé par le droit d'auteur, le droit des marques et/ou tout autre droit de propriété intellectuelle.",
+      "p2": "Ces éléments sont la propriété exclusive d'Adopte un Étudiant ou font l'objet d'une autorisation d'utilisation. Toute reproduction, représentation, modification, publication, adaptation de tout ou partie des éléments du site, quel que soit le moyen ou le procédé utilisé, est interdite, sauf autorisation écrite préalable.",
+      "p3": "Toute exploitation non autorisée du site ou de l'un quelconque des éléments qu'il contient sera considérée comme constitutive d'une contrefaçon et poursuivie conformément aux dispositions des articles L.335-2 et suivants du Code de Propriété Intellectuelle."
+    },
+    "dataProtection": {
+      "title": "5. Protection des données personnelles",
+      "p1": "Conformément à la loi 'Informatique et Libertés' du 6 janvier 1978 modifiée et au Règlement Général sur la Protection des Données (RGPD) du 27 avril 2016, vous disposez d'un droit d'accès, de rectification, de suppression, d'opposition, de limitation du traitement et de portabilité des données vous concernant.",
+      "p2": "Pour exercer ces droits ou pour toute question sur le traitement de vos données, vous pouvez nous contacter :",
+      "contactEmail": "Par email : dpo@adopte-un-etudiant.fr",
+      "contactMail": "Par courrier : Adopte un Étudiant - DPO, 123 Avenue des Champs-Élysées, 75008 Paris",
+      "cnilPrompt": "Vous pouvez également introduire une réclamation auprès de la Commission Nationale de l'Informatique et des Libertés (CNIL) :",
+      "cnilLabel": "www.cnil.fr"
+    },
+    "additionalInfoTitle": "Informations complémentaires",
+    "additionalInfoText": "Ces mentions légales ont été mises à jour le 1er janvier 2024. Elles peuvent être modifiées à tout moment pour se conformer aux évolutions légales et réglementaires."
+  },
+  "gdpr": {
+    "title": "Règlement Général sur la Protection des Données",
+    "description": "Notre engagement pour la protection de votre vie privée et de vos données personnelles",
+    "lastUpdated": "Dernière mise à jour : 1er janvier 2024",
+    "introTitle": "Notre engagement RGPD",
+    "introText": "Adopte un Étudiant s'engage à protéger la vie privée de ses utilisateurs conformément au Règlement Général sur la Protection des Données (RGPD) de l'Union européenne, en vigueur depuis le 25 mai 2018.",
+    "dataCollectedTitle": "Données collectées",
+    "dataCollectedSubtitle": "Nous collectons uniquement les données nécessaires au fonctionnement de nos services",
+    "dataTypes": {
+      "identification": {
+        "title": "Données d'identification",
+        "items": ["Nom et prénom", "Adresse email", "Numéro de téléphone", "Date de naissance"]
+      },
+      "academic": {
+        "title": "Données académiques",
+        "items": ["Établissement d'études", "Niveau d'études", "Spécialisation", "CV et portfolio"]
+      },
+      "professional": {
+        "title": "Données professionnelles",
+        "items": ["Expériences professionnelles", "Compétences", "Préférences de poste", "Disponibilités"]
+      }
+    },
+    "usage": {
+      "purposesTitle": "Finalités principales",
+      "purposesList": [
+        "Création et gestion de votre compte utilisateur",
+        "Mise en relation avec les entreprises partenaires",
+        "Amélioration de nos algorithmes de matching",
+        "Communication relative à nos services"
+      ],
+      "legalBasesTitle": "Bases légales",
+      "legalBasesList": [
+        "Exécution du contrat de service",
+        "Consentement explicite de l'utilisateur",
+        "Intérêt légitime pour l'amélioration des services",
+        "Obligations légales et réglementaires"
+      ]
+    },
+    "rights": {
+      "title": "Vos droits RGPD",
+      "accessTitle": "Droit d'accès",
+      "accessDescription": "Vous pouvez demander l'accès aux données personnelles que nous détenons sur vous.",
+      "rectificationTitle": "Droit de rectification",
+      "rectificationDescription": "Vous pouvez demander la correction de données inexactes ou incomplètes.",
+      "erasureTitle": "Droit à l'effacement",
+      "erasureDescription": "Vous pouvez demander la suppression de vos données dans certaines conditions.",
+      "portabilityTitle": "Droit à la portabilité",
+      "portabilityDescription": "Vous pouvez récupérer vos données dans un format structuré et lisible."
+    },
+    "contact": {
+      "title": "Exercer vos droits",
+      "description": "Pour exercer vos droits ou pour toute question concernant le traitement de vos données personnelles, contactez notre Délégué à la Protection des Données (DPO).",
+      "responseTime": "Délai de réponse : 30 jours maximum"
+    }
+  },
   "dashboardStudent": {
     "title": "Tableau de bord Étudiant",
     "welcome": "Bienvenue {{email}}, suivez vos candidatures et découvrez de nouvelles opportunités",
