feat(web): add mobile menu; improve viewport and responsiveness

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -134,6 +134,7 @@
     "profile": "Profile",
     "settings": "Settings",
     "logout": "Logout",
+    "messages": "Messages",
     "backToOffers": "Back to offers"
   },
   "auth": {
