--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -186,6 +186,7 @@
     "profile": "Profil",
     "settings": "Paramètres",
     "logout": "Déconnexion",
+    "messages": "Messages",
     "backToOffers": "Retour aux offres"
   },
   "auth": {
