feat(web/i18n): add first/last name labels; improve registration placeholders
- Add i18n keys (en/fr): forms.firstName, forms.lastName,
  forms.enterYourFirstName, forms.enterYourLastName,
  forms.enterYourCompanyName, forms.enterYourContactEmail
- Update RegisterPage to use specific first/last name labels and placeholders
- Replace company name placeholder with forms.enterYourCompanyName

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -266,6 +266,12 @@
     "draft": "Draft",
     "published": "Published",
     "unpublished": "Unpublished",
+    "firstName": "First Name",
+    "lastName": "Last Name",
+    "enterYourFirstName": "Enter your first name",
+    "enterYourLastName": "Enter your last name",
+    "enterYourCompanyName": "Enter your company name",
+    "enterYourContactEmail": "Enter your contact email",
     "name": "Name",
     "phone": "Phone",
     "company": "Company",
