--- a/apps/web/src/i18n/locales/fr.json
+++ b/apps/web/src/i18n/locales/fr.json
@@ -292,6 +292,12 @@
     "draft": "Brouillon",
     "published": "Publié",
     "unpublished": "Non publié",
+    "firstName": "Prénom",
+    "lastName": "Nom",
+    "enterYourFirstName": "Saisissez votre prénom",
+    "enterYourLastName": "Saisissez votre nom",
+    "enterYourCompanyName": "Saisissez le nom de votre entreprise",
+    "enterYourContactEmail": "Saisissez votre adresse email de contact",
     "name": "Nom",
     "phone": "Téléphone",
     "company": "Entreprise",
