fix(auth,2fa,profile,blog,i18n): stabilize OAuth/2FA and delete-account; expose blog status; add translations
auth: correct Google OAuth callback URIs to /api/auth/* and use a robust API base URL (no double port); wire delete-callback; ensure web uses VITE_API_URL/api.

profile: fix 'Supprimer le compte' for company accounts by deleting dependent offers in a single transaction before user deletion.

2fa: generate only stores secret; verify enables 2FA and issues recovery codes; disable clears incomplete setups; UI reads server state and refreshes after disable.

blog-admin: show post status in the list and include status in API responses.

i18n: add profile.deleteOAuthWarning (en/fr).

--- a/apps/web/src/i18n/locales/en.json
+++ b/apps/web/src/i18n/locales/en.json
@@ -731,9 +731,10 @@
     "disable": "Disable",
     "dangerZone": "Danger Zone",
     "deleteAccountWarning": "Deleting your account is permanent and cannot be undone.",
-    "deleteWithGoogle": "Delete with Google",
-    "confirmDeletion": "Confirm Deletion",
-    "enterPasswordToDelete": "Please enter your password to delete your account."
+      "deleteWithGoogle": "Delete with Google",
+  "confirmDeletion": "Confirm Deletion",
+  "deleteOAuthWarning": "You will be redirected to Google to confirm your identity. After confirmation, your account and all associated data will be permanently deleted.",
+  "enterPasswordToDelete": "Please enter your password to delete your account."
   },
   "profileForm": {
     "studentProfile": "Student Profile",
